--- a/servless-nodejs/serverless.yml
+++ b/servless-nodejs/serverless.yml
@@ -18,7 +18,7 @@ functions:
           path: /
           method: get
   sayHello:
-    handler: sayHello.handler
+    handler: sayHello.sayHello
     events:
       - httpApi:
           path: /hello
